# Read4Me

./: .gitignore  .readthedocs.yaml  README.md  config.ini  pyproject.toml  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  read4me.models.rst  read4me.project_config.rst  read4me.scripts.make_corpus.rst  read4me.scripts.topics.rst  read4me.telegram_module.rst  read4me.topicsprocessor.rst  read4me.userbase.rst  requestlinkinfo.mmd
read4me/: custom_filters.py  datafactory.py  docprocessing.py  models.py  telegram_module.py  topicsprocessor.py  userbase.py
read4me.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
read4me/scripts/: dir_setup.py  make_corpus.py  topics.py
