[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "read4me"
version = "1.0.0"
authors = [
  { name="Francesco Littarru" },
]
description = "A telegram bot that reads texts"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
]

[project.scripts]
run_bot = "read4me.telegram_module:run"